parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> gt
Rule 1     gt -> letra resto
Rule 2     gt -> digito resto
Rule 3     gt -> pg resto
Rule 4     gt -> ex resto
Rule 5     gt -> ps resto
Rule 6     gt -> c resto
Rule 7     resto -> letra resto
Rule 8     resto -> digito resto
Rule 9     resto -> simbolo resto
Rule 10    resto -> pg resto
Rule 11    resto -> ex resto
Rule 12    resto -> ps resto
Rule 13    resto -> c resto
Rule 14    resto -> empty
Rule 15    simbolo -> SIMBOLOS
Rule 16    simbolo -> COMA
Rule 17    pg -> ia pb ic
Rule 18    ex -> ea pb ec
Rule 19    ps -> pa pb pc
Rule 20    c -> cs pb cs
Rule 21    ia -> INTERROGACION_APERTURA
Rule 22    ic -> INTERROGACION_CIERRE
Rule 23    ea -> ADMIRACION_APERTURA
Rule 24    ec -> ADMIRACION_CIERRE
Rule 25    pa -> PARENTESIS_APERTURA
Rule 26    pc -> PARENTESIS_CIERRE
Rule 27    cs -> COMILLA_SIMPLE
Rule 28    pb -> letra comp
Rule 29    pb -> digito comp
Rule 30    comp -> letra comp
Rule 31    comp -> digito comp
Rule 32    comp -> coma comp
Rule 33    comp -> empty
Rule 34    letra -> PALABRA
Rule 35    digito -> NUMERO
Rule 36    coma -> COMA
Rule 37    empty -> <empty>

Terminals, with rules where they appear

ADMIRACION_APERTURA  : 23
ADMIRACION_CIERRE    : 24
COMA                 : 16 36
COMILLA_SIMPLE       : 27
INTERROGACION_APERTURA : 21
INTERROGACION_CIERRE : 22
NUMERO               : 35
PALABRA              : 34
PARENTESIS_APERTURA  : 25
PARENTESIS_CIERRE    : 26
SIMBOLOS             : 15
error                : 

Nonterminals, with rules where they appear

c                    : 6 13
coma                 : 32
comp                 : 28 29 30 31 32
cs                   : 20 20
digito               : 2 8 29 31
ea                   : 18
ec                   : 18
empty                : 14 33
ex                   : 4 11
gt                   : 0
ia                   : 17
ic                   : 17
letra                : 1 7 28 30
pa                   : 19
pb                   : 17 18 19 20
pc                   : 19
pg                   : 3 10
ps                   : 5 12
resto                : 1 2 3 4 5 6 7 8 9 10 11 12 13
simbolo              : 9

Parsing method: LALR

state 0

    (0) S' -> . gt
    (1) gt -> . letra resto
    (2) gt -> . digito resto
    (3) gt -> . pg resto
    (4) gt -> . ex resto
    (5) gt -> . ps resto
    (6) gt -> . c resto
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    gt                             shift and go to state 1
    letra                          shift and go to state 2
    digito                         shift and go to state 3
    pg                             shift and go to state 4
    ex                             shift and go to state 5
    ps                             shift and go to state 6
    c                              shift and go to state 7
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 1

    (0) S' -> gt .



state 2

    (1) gt -> letra . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    letra                          shift and go to state 18
    resto                          shift and go to state 19
    digito                         shift and go to state 20
    simbolo                        shift and go to state 21
    pg                             shift and go to state 22
    ex                             shift and go to state 23
    ps                             shift and go to state 24
    c                              shift and go to state 25
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 3

    (2) gt -> digito . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    digito                         shift and go to state 20
    resto                          shift and go to state 29
    letra                          shift and go to state 18
    simbolo                        shift and go to state 21
    pg                             shift and go to state 22
    ex                             shift and go to state 23
    ps                             shift and go to state 24
    c                              shift and go to state 25
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 4

    (3) gt -> pg . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    pg                             shift and go to state 22
    resto                          shift and go to state 30
    letra                          shift and go to state 18
    digito                         shift and go to state 20
    simbolo                        shift and go to state 21
    ex                             shift and go to state 23
    ps                             shift and go to state 24
    c                              shift and go to state 25
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 5

    (4) gt -> ex . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    ex                             shift and go to state 23
    resto                          shift and go to state 31
    letra                          shift and go to state 18
    digito                         shift and go to state 20
    simbolo                        shift and go to state 21
    pg                             shift and go to state 22
    ps                             shift and go to state 24
    c                              shift and go to state 25
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 6

    (5) gt -> ps . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    ps                             shift and go to state 24
    resto                          shift and go to state 32
    letra                          shift and go to state 18
    digito                         shift and go to state 20
    simbolo                        shift and go to state 21
    pg                             shift and go to state 22
    ex                             shift and go to state 23
    c                              shift and go to state 25
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 7

    (6) gt -> c . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    c                              shift and go to state 25
    resto                          shift and go to state 33
    letra                          shift and go to state 18
    digito                         shift and go to state 20
    simbolo                        shift and go to state 21
    pg                             shift and go to state 22
    ex                             shift and go to state 23
    ps                             shift and go to state 24
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 8

    (34) letra -> PALABRA .

    PALABRA         reduce using rule 34 (letra -> PALABRA .)
    NUMERO          reduce using rule 34 (letra -> PALABRA .)
    SIMBOLOS        reduce using rule 34 (letra -> PALABRA .)
    COMA            reduce using rule 34 (letra -> PALABRA .)
    INTERROGACION_APERTURA reduce using rule 34 (letra -> PALABRA .)
    ADMIRACION_APERTURA reduce using rule 34 (letra -> PALABRA .)
    PARENTESIS_APERTURA reduce using rule 34 (letra -> PALABRA .)
    COMILLA_SIMPLE  reduce using rule 34 (letra -> PALABRA .)
    $end            reduce using rule 34 (letra -> PALABRA .)
    INTERROGACION_CIERRE reduce using rule 34 (letra -> PALABRA .)
    ADMIRACION_CIERRE reduce using rule 34 (letra -> PALABRA .)
    PARENTESIS_CIERRE reduce using rule 34 (letra -> PALABRA .)


state 9

    (35) digito -> NUMERO .

    PALABRA         reduce using rule 35 (digito -> NUMERO .)
    NUMERO          reduce using rule 35 (digito -> NUMERO .)
    SIMBOLOS        reduce using rule 35 (digito -> NUMERO .)
    COMA            reduce using rule 35 (digito -> NUMERO .)
    INTERROGACION_APERTURA reduce using rule 35 (digito -> NUMERO .)
    ADMIRACION_APERTURA reduce using rule 35 (digito -> NUMERO .)
    PARENTESIS_APERTURA reduce using rule 35 (digito -> NUMERO .)
    COMILLA_SIMPLE  reduce using rule 35 (digito -> NUMERO .)
    $end            reduce using rule 35 (digito -> NUMERO .)
    INTERROGACION_CIERRE reduce using rule 35 (digito -> NUMERO .)
    ADMIRACION_CIERRE reduce using rule 35 (digito -> NUMERO .)
    PARENTESIS_CIERRE reduce using rule 35 (digito -> NUMERO .)


state 10

    (17) pg -> ia . pb ic
    (28) pb -> . letra comp
    (29) pb -> . digito comp
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9

    pb                             shift and go to state 34
    letra                          shift and go to state 35
    digito                         shift and go to state 36

state 11

    (18) ex -> ea . pb ec
    (28) pb -> . letra comp
    (29) pb -> . digito comp
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9

    pb                             shift and go to state 37
    letra                          shift and go to state 35
    digito                         shift and go to state 36

state 12

    (19) ps -> pa . pb pc
    (28) pb -> . letra comp
    (29) pb -> . digito comp
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9

    pb                             shift and go to state 38
    letra                          shift and go to state 35
    digito                         shift and go to state 36

state 13

    (20) c -> cs . pb cs
    (28) pb -> . letra comp
    (29) pb -> . digito comp
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9

    pb                             shift and go to state 39
    letra                          shift and go to state 35
    digito                         shift and go to state 36

state 14

    (21) ia -> INTERROGACION_APERTURA .

    PALABRA         reduce using rule 21 (ia -> INTERROGACION_APERTURA .)
    NUMERO          reduce using rule 21 (ia -> INTERROGACION_APERTURA .)


state 15

    (23) ea -> ADMIRACION_APERTURA .

    PALABRA         reduce using rule 23 (ea -> ADMIRACION_APERTURA .)
    NUMERO          reduce using rule 23 (ea -> ADMIRACION_APERTURA .)


state 16

    (25) pa -> PARENTESIS_APERTURA .

    PALABRA         reduce using rule 25 (pa -> PARENTESIS_APERTURA .)
    NUMERO          reduce using rule 25 (pa -> PARENTESIS_APERTURA .)


state 17

    (27) cs -> COMILLA_SIMPLE .

    PALABRA         reduce using rule 27 (cs -> COMILLA_SIMPLE .)
    NUMERO          reduce using rule 27 (cs -> COMILLA_SIMPLE .)
    SIMBOLOS        reduce using rule 27 (cs -> COMILLA_SIMPLE .)
    COMA            reduce using rule 27 (cs -> COMILLA_SIMPLE .)
    INTERROGACION_APERTURA reduce using rule 27 (cs -> COMILLA_SIMPLE .)
    ADMIRACION_APERTURA reduce using rule 27 (cs -> COMILLA_SIMPLE .)
    PARENTESIS_APERTURA reduce using rule 27 (cs -> COMILLA_SIMPLE .)
    COMILLA_SIMPLE  reduce using rule 27 (cs -> COMILLA_SIMPLE .)
    $end            reduce using rule 27 (cs -> COMILLA_SIMPLE .)


state 18

    (7) resto -> letra . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    letra                          shift and go to state 18
    resto                          shift and go to state 40
    digito                         shift and go to state 20
    simbolo                        shift and go to state 21
    pg                             shift and go to state 22
    ex                             shift and go to state 23
    ps                             shift and go to state 24
    c                              shift and go to state 25
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 19

    (1) gt -> letra resto .

    $end            reduce using rule 1 (gt -> letra resto .)


state 20

    (8) resto -> digito . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    digito                         shift and go to state 20
    resto                          shift and go to state 41
    letra                          shift and go to state 18
    simbolo                        shift and go to state 21
    pg                             shift and go to state 22
    ex                             shift and go to state 23
    ps                             shift and go to state 24
    c                              shift and go to state 25
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 21

    (9) resto -> simbolo . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    simbolo                        shift and go to state 21
    resto                          shift and go to state 42
    letra                          shift and go to state 18
    digito                         shift and go to state 20
    pg                             shift and go to state 22
    ex                             shift and go to state 23
    ps                             shift and go to state 24
    c                              shift and go to state 25
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 22

    (10) resto -> pg . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    pg                             shift and go to state 22
    resto                          shift and go to state 43
    letra                          shift and go to state 18
    digito                         shift and go to state 20
    simbolo                        shift and go to state 21
    ex                             shift and go to state 23
    ps                             shift and go to state 24
    c                              shift and go to state 25
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 23

    (11) resto -> ex . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17

    ex                             shift and go to state 23
    resto                          shift and go to state 44
    letra                          shift and go to state 18
    digito                         shift and go to state 20
    simbolo                        shift and go to state 21
    pg                             shift and go to state 22
    ps                             shift and go to state 24
    c                              shift and go to state 25
    empty                          shift and go to state 26
    ia                             shift and go to state 10
    ea                             shift and go to state 11
    pa                             shift and go to state 12
    cs                             shift and go to state 13

state 24

    (12) resto -> ps . resto
    (7) resto -> . letra resto
    (8) resto -> . digito resto
    (9) resto -> . simbolo resto
    (10) resto -> . pg resto
    (11) resto -> . ex resto
    (12) resto -> . ps resto
    (13) resto -> . c resto
    (14) resto -> . empty
    (34) letra -> . PALABRA
    (35) digito -> . NUMERO
    (15) simbolo -> . SIMBOLOS
    (16) simbolo -> . COMA
    (17) pg -> . ia pb ic
    (18) ex -> . ea pb ec
    (19) ps -> . pa pb pc
    (20) c -> . cs pb cs
    (37) empty -> .
    (21) ia -> . INTERROGACION_APERTURA
    (23) ea -> . ADMIRACION_APERTURA
    (25) pa -> . PARENTESIS_APERTURA
    (27) cs -> . COMILLA_SIMPLE

    PALABRA         shift and go to state 8
    NUMERO          shift and go to state 9
    SIMBOLOS        shift and go to state 27
    COMA            shift and go to state 28
    $end            reduce using rule 37 (empty -> .)
    INTERROGACION_APERTURA shift and go to state 14
    ADMIRACION_APERTURA shift and go to state 15
    PARENTESIS_APERTURA shift and go to state 16
    COMILLA_SIMPLE  shift and go to state 17
